<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ActLikeLocalActivity" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actlikealocal_text1" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text2" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text3" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text4" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text4"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text5" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text5"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text6" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text6"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text7" />

        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text7"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text8" />

        <TextView
            android:id="@+id/text9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text8"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text9" />

        <TextView
            android:id="@+id/text10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text9"
            android:paddingTop="10dp"
            android:text="@string/actlikealocal_text10" />
    </RelativeLayout>

</ScrollView>