<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_toast_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/legend_rounded_borders"
    android:orientation="horizontal"
    android:padding="8dp" >

    <TextView
        android:id="@+id/legend_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/info"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/legend_info" />

    <TextView
        android:id="@+id/legend_hostel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_info"
        android:drawableLeft="@drawable/hostel"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/legend_hostel" />

    <TextView
        android:id="@+id/legend_hungrywindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_hostel"
        android:drawableLeft="@drawable/hungry_window"
        android:drawablePadding="18dp"
        android:gravity="center_vertical"
        android:text="@string/legend_hungrywindow" />

    <TextView
        android:id="@+id/legend_grocery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_hungrywindow"
        android:drawableLeft="@drawable/grocery"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:text="@string/legend_grocery" />

    <TextView
        android:id="@+id/legend_shoppingcentre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_grocery"
        android:drawableLeft="@drawable/shopping_centre"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:text="@string/legend_shoppingcentre" />

    <TextView
        android:id="@+id/legend_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_shoppingcentre"
        android:drawableLeft="@drawable/pharmacy"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/legend_pharmacy" />

    <TextView
        android:id="@+id/legend_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_pharmacy"
        android:drawableLeft="@drawable/hospital"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/legend_hospital" />

    <TextView
        android:id="@+id/legend_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_hospital"
        android:drawableLeft="@drawable/post"
        android:drawablePadding="19dp"
        android:gravity="center_vertical"
        android:text="@string/legend_post" />

    <TextView
        android:id="@+id/legend_atm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_post"
        android:drawableLeft="@drawable/atm"
        android:drawablePadding="17dp"
        android:gravity="center_vertical"
        android:text="@string/legend_atm" />

    <TextView
        android:id="@+id/legend_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/legend_atm"
        android:drawableLeft="@drawable/sport"
        android:drawablePadding="19dp"
        android:gravity="center_vertical"
        android:text="@string/legend_sport" />
    
    <TextView
        android:id="@+id/legend_wc"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/legend_sport"
        android:drawableLeft="@drawable/wc"
        android:drawablePadding="19dp"
        android:gravity="center_vertical"
        android:text="@string/legend_wc"
        android:textColor="#000000" />

</RelativeLayout>