<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text" />

    <TextView
        android:id="@+id/edition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text"
        android:paddingTop="10dp"
        android:text="@string/edition_text" />

    <TextView
        android:id="@+id/developers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edition_text"
        android:paddingTop="10dp"
        android:text="@string/developers_text" />

    <TextView
        android:id="@+id/writers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/developers_text"
        android:text="@string/writers_text" />

    <TextView
        android:id="@+id/language_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/writers_text"
        android:text="@string/language_text" />

    <TextView
        android:id="@+id/graphic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/language_text"
        android:text="@string/graphic_text" />

    <TextView
        android:id="@+id/link_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/graphic_text"
        android:paddingTop="30dp"
        android:text="@string/link_title" />

    <TextView
        android:id="@+id/link_useit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_title"
        android:linksClickable="true" />

    <TextView
        android:id="@+id/link_cbuseit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_useit"
        android:linksClickable="true" />

    <TextView
        android:id="@+id/link_fbuseit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_cbuseit"
        android:linksClickable="true" />

    <TextView
        android:id="@+id/link_fbcbck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_fbuseit"
        android:linksClickable="true" />

    <TextView
        android:id="@+id/contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_fbcbck"
        android:paddingTop="10dp"
        android:text="@string/contact_title" />

    <TextView
        android:id="@+id/contact_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_title"
        android:linksClickable="true" />

    <ImageView
        android:id="@+id/use_it_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/use_it_logo" />

</RelativeLayout>